--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.7.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.12",
+    "lucide-react": "^0.525.0",
     "mammoth": "^1.8.0",
     "ollama": "^0.5.16",
     "pdfjs-dist": "^4.5.136",
@@ -21,6 +22,7 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
+    "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -31,9 +33,12 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.5.4",
     "vite": "^7.0.0"
   }
