--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
   },
   "dependencies": {
     "@google/genai": "^1.7.0",
+    "docx": "^9.5.1",
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.12",
+    "json5": "^2.2.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
     "mammoth": "^1.8.0",
     "ollama": "^0.5.16",
-    "pdfjs-dist": "^4.5.136",
+    "pdfjs-dist": "^2.16.105",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
+    "tesseract.js": "^6.0.1",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^22.14.0",
     "@types/react-dom": "^19.1.6",
     "@types/react-syntax-highlighter": "^15.5.13",
