--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^3.1.0",
     "remark-gfm": "^4.0.0",
+    "seedrandom": "^3.0.5",
+    "simplex-noise": "^3.0.1",
     "tesseract.js": "^6.0.1",
+    "three": "^0.178.0",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0"
   },
