--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/node": "^22.14.0",
     "@types/react-dom": "^19.1.6",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/seedrandom": "^3.0.8",
+    "@types/three": "^0.178.1",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
